--- a/presentazione.tex
+++ b/presentazione.tex
@@ -99,10 +99,11 @@
 \maketitle
 
 \begin{frame}
-	\frametitle{Il problema}
-	\begin{itemize}
-		content...
-	\end{itemize}
+	\frametitle{Il Problema}
+	\vskip -3cm
+	\begin{huge}
+		Trovare automaticamente punti operazione per carrelli automatici.
+	\end{huge}
 \end{frame}
 
 
