--- a/presentazione.tex
+++ b/presentazione.tex
@@ -100,10 +100,43 @@
 
 \begin{frame}
 	\frametitle{Il Problema}
-	\vskip -3cm
-	\begin{huge}
-		Trovare automaticamente punti operazione per carrelli automatici.
-	\end{huge}
+	\vskip 0.4cm
+	\begin{center}
+		\begin{huge}
+			Trovare automaticamente punti operazione per carrelli automatici (AGV)
+		\end{huge}
+	\end{center}
+\vskip 0.4cm
+\begin{center}
+	\includegraphics[scale=0.5]{Img/LGV/op}
+\end{center}
+\end{frame}
+\begin{frame}
+	\frametitle{Come si procedeva prima}
+	\begin{columns}
+		\column{0.6\textwidth}
+			\begin{large}
+				\begin{itemize}
+					\item Misurazioni manuali sul campo
+					\begin{itemize}
+						\item Effettuate conducendo un carrello in giro per il magazzino
+						\item Richiedevano mesi
+						\item Rendevano inagibili parti del magazzino durante la procedura
+					\end{itemize}
+					\item Individuazione manuale con l'aiuto di un programma
+					\begin{itemize}
+						\item Procedura tediosa
+						\item Richiede settimane
+						\item Occupa l'operatore per molto tempo
+					\end{itemize}
+				\end{itemize}
+			\end{large}
+		\column{0.4\textwidth}
+		\includegraphics[width=\textwidth]{Img/LGV/select}
+	\end{columns}
+\end{frame}
+\begin{frame}
+	\frametitle{Dalla Point Cloud al 2D}
 \end{frame}
 
 
