--- a/presentazione.tex
+++ b/presentazione.tex
@@ -141,7 +141,7 @@
 								\item Può richiedere un blocco della produzione
 							\end{itemize}
 					\end{itemize}
-					\item Selezione manuale tramite software
+					\item Selezione manuale con il supporto di un software
 					\begin{itemize}	%migliorare linguaggio
 						%\item Meno complessa delle misurazioni sul campo
 						\item Difetti:
