--- a/presentazione.tex
+++ b/presentazione.tex
@@ -153,7 +153,7 @@
 				\end{itemize}
 			\end{large}
 		\column{0.4\textwidth}
-		\vskip 0.7cm
+		\vskip 0.2cm
 		\includegraphics[width=0.8\textwidth]{Img/LGV/indman}\vskip 1.3cm
 			\includegraphics[width=0.8\textwidth]{Img/LGV/select}
 	\end{columns}
@@ -185,7 +185,7 @@
 			\begin{enumerate}		%must be better
 				\item Si assegna un valore ai punti in base alla curvatura della superficie sottostante stimata
 				\item Si appiattisce la point cloud e si sommano i valori che cadono sulle celle di una griglia in 2D
-				\item Si assegna un colore in scala di grigi alle caselle della griglia in base al colore
+				\item Si assegna un colore in scala di grigi alle caselle della griglia in base al valore
 			\end{enumerate}
 		\column{0.5\textwidth}
 			\includegraphics[width=0.6\textwidth]{Img/CURVATURE/CURVATURE_02_num}
@@ -200,7 +200,7 @@
 	\begin{columns}
 		\column{0.5\textwidth}
 			\begin{itemize}
-				\item La libreria OpenCV assegna un valore ad ogni pixel in base alla somiglianza con un template
+				\item Il sistema assegna un valore ad ogni pixel in base alla somiglianza con un template
 				\item Il valore è determinato con una Cross Correlation tra l'immagine e il template
 				\item Il template deve essere selezionato dall'utente
 				\item Sono necessari alcuni filtri
@@ -350,8 +350,11 @@
 			\begin{large}
 				\begin{itemize}
 					\item Ricerca di oggetti orientati diversamente dal template
+					\vskip 0.5cm
 					\item Miglioramenti del filtro NMS
+					\vskip 0.5cm
 					\item Verifica sul campo della correttezza dei risultati ottenuti
+					\vskip 0.5cm
 					\item Integrazione del sistema nella progettazione di magazzini automatizzati
 				\end{itemize}
 			\end{large}
